--- a/services.html
+++ b/services.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Construction HTML-5 Template</title>
+        <title>Acker Choquette Dray Legal Consultants.</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="manifest" href="site.webmanifest">
+         
 		<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -127,8 +127,8 @@
                                                 <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="false"> Show  all </a>
                                                 <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false"> Business</a>
                                                 <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Property</a>
-                                                <a class="nav-item nav-link" id="nav-technology" data-toggle="tab" href="#nav-techno" role="tab" aria-controls="nav-contact" aria-selected="false">Civil</a>
-                                                <a class="nav-item nav-link" id="nav-special" data-toggle="tab" href="#nav-techno" role="tab" aria-controls="nav-contact" aria-selected="false">Specialized</a>
+                                                <a class="nav-item nav-link" id="nav-technology-tab" data-toggle="tab" href="#nav-techno" role="tab" aria-controls="nav-techno" aria-selected="false">Civil</a>
+                                                <a class="nav-item nav-link" id="nav-special-tab" data-toggle="tab" href="#nav-special" role="tab" aria-controls="nav-special" aria-selected="false">Specialized</a>
                                             </div>
                                         </nav>
                                         <!--End Nav Button  -->
@@ -169,7 +169,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess3.jpg" alt="">
+                                                        <img src="assets/img/service/servicess5.jpg" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/arbitration-resolution.html" class="plus-btn"><i class="fas fa-file-alt"></i></a>
@@ -180,7 +180,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess4.jpg" alt="">
+                                                        <img src="assets/img/service/servicess3.jpg" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/property-law.html" class="plus-btn"><i class="fas fa-home"></i></a>
@@ -191,7 +191,7 @@
                                             <div class="col-lg-4 col-md-6"> 
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess5.jpg" alt="">
+                                                        <img src="assets/img/service/servicess6.jpg" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/familly-law.html" class="plus-btn"><i class="fas fa-basketball-ball"></i></a>
@@ -202,7 +202,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess6.jpg" alt="">
+                                                        <img src="assets/img/service/servicess4.jpg" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/intellectual-law.html" class="plus-btn"><i class="fas fa-heart"></i></a>
@@ -304,7 +304,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess4.jpg" alt="">
+                                                        <img src="assets/img/service/servicess3.jpg" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/property-law.html" class="plus-btn"><i class="fas fa-home"></i></a>
@@ -316,13 +316,13 @@
                                     </div>
                                 </div>
                                 <!-- card FUR -->
-                                <div class="tab-pane fade" id="nav-last" role="tabpanel" aria-labelledby="nav-last-tab">
+                                <div class="tab-pane fade" id="nav-techno" role="tabpanel" aria-labelledby="nav-last-tab">
                                     <div class="project-caption">
                                         <div class="row">
                                             <div class="col-lg-4 col-md-6"> 
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess5.jpg" alt="">
+                                                        <img src="assets/img/service/servicess6.jpg" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/familly-law.html" class="plus-btn"><i class="fas fa-basketball-ball"></i></a>
@@ -345,13 +345,13 @@
                                     </div>
                                 </div>
                                 <!-- card FIVE -->
-                                <div class="tab-pane fade" id="nav-techno" role="tabpanel" aria-labelledby="nav-technology">
+                                <div div class="tab-pane fade" id="nav-special" role="tabpanel" aria-labelledby="nav-special-tab">
                                     <div class="project-caption">
                                         <div class="row">
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess6.jpg" alt="">
+                                                        <img src="assets/img/service/servicess4.jpg" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/intellectual-law.html" class="plus-btn"><i class="fas fa-heart"></i></a>
@@ -384,7 +384,7 @@
                                             <div class="col-lg-4 col-md-6">
                                                 <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                                                     <div class="project-img">
-                                                        <img src="assets/img/service/servicess3.jpg" alt="">
+                                                        <img src="assets/img/service/servicess5.jpg" alt="">
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/arbitration-resolution.html" class="plus-btn"><i class="fas fa-file-alt"></i></a>
