--- a/servises/commercial-law.html
+++ b/servises/commercial-law.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Construction HTML-5 Template</title>
+        <title>Acker Choquette Dray Legal Consultants.</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="manifest" href="site.webmanifest">
+         
 		<link rel="shortcut icon" type="image/x-icon" href="../assets/img/favicon.ico">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
 
