--- a/project.html
+++ b/project.html
@@ -121,7 +121,7 @@
                         <div class="tab-content active" id="nav-tabContent">
                             <div class="team-area section-padding30">
                                 <div class="container">
-                                    <div class="row">
+                                    <div class="row" style="justify-content: center; align-items: center;">
                                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
                                             <div class="single-team mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                                                 <div class="team-img">
@@ -130,6 +130,21 @@
                                                 <div class="team-caption">
                                                     <span>Advocates & Legal Consultants</span>
                                                     <h3>Denis Acker</h3>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
+                                            <div class="single-team mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+                                                <div class="button-container">
+                                                    <a href="/" class="brutalist-button acd-law button-2">
+                                                    <div class="acd-law-logo">
+                                                        <!-- Replace the SVG with your logo -->
+                                                        <img src="assets/img/logo/logo.png" alt="ACD-LAW Logo" class="acd-law-icon">
+                                                    </div>
+                                                    <div class="button-text">
+                                                        <span>ACD-LAW</span>
+                                                    </div>
+                                                    </a>
                                                 </div>
                                             </div>
                                         </div>
