--- a/services.html
+++ b/services.html
@@ -118,7 +118,7 @@
                 <section class="project-area  section-padding30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                     <div class="container">
                        <div class="project-heading mb-35">
-                            <div class="row align-items-end">
+                            <div class="row align-items-end" style="justify-content: flex-end;">
                                 <div class="col-lg-6">
                                     <div class="properties__button">
                                         <!--Nav Button  -->                                            
@@ -251,6 +251,28 @@
                                                     <div class="project-cap">
                                                         <a href="servises/corporate-law.html" class="plus-btn"><i class="fas fa-gavel"></i></a>
                                                        <h4><a href="servises/corporate-law.html">CORPORATE LAW</a></h4>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4 col-md-6">
+                                                <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+                                                    <div class="project-img">
+                                                        <img src="assets/img/service/servicess3.jpg" alt="">
+                                                    </div>
+                                                    <div class="project-cap">
+                                                        <a href="servises/wills-law.html" class="plus-btn"><i class="fas fa-home"></i></a>
+                                                       <h4><a href="servises/wills-law.html">WILLS LAW</a></h4>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4 col-md-6">
+                                                <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                                                    <div class="project-img">
+                                                        <img src="assets/img/service/servicess1.jpg" alt="">
+                                                    </div>
+                                                    <div class="project-cap">
+                                                        <a href="servises/business-uae.html" class="plus-btn"><i class="fas fa-briefcase"></i></a>
+                                                        <h4><a href="servises/business-uae.html">BUSINESS SETUP IN UAE FREE ZONES</a></h4>
                                                     </div>
                                                 </div>
                                             </div>
