--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <section class="project-area  section-padding30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                     <div class="container">
                        <div class="project-heading mb-35">
-                            <div class="row align-items-end">
+                            <div class="row justify-content-end">
                                 <div class="col-lg-6">
                                     <div class="properties__button">
                                         <!--Nav Button  -->                                            
