--- a/servises/tax-law.html
+++ b/servises/tax-law.html
@@ -159,12 +159,12 @@
                                 <ul>
                                     <li><strong>Dubai:</strong>Khalid Bin Waleed Road, Bank Street Building, 2nd Floor Office 215, Dubai. PO BOX 21602, United Arab Emirates</li>
                                     <li>Phone: (+971) 4 355 0004</li>
-                                    <li>Email: <a href="mailto:canlaw@emirates.net.ae">canlaw@emirates.net.ae</a></li>
+                                    <li>Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
                                 </ul>
                                 <ul>
                                     <li><strong>Paris:</strong>39Bis, Boulevard Exelmans, 75016 Paris</li>
                                     <li>Phone: (+33) 145531996</li>
-                                    <li>Email: <a href="mailto:contact@jdavocat.com">contact@jdavocat.com</a></li>
+                                    <li>Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
                                 </ul>
                             </div>
                         </div>
