--- a/servises/corporate-law.html
+++ b/servises/corporate-law.html
@@ -64,6 +64,15 @@
                                             <li><a href="../services.html">Services</a></li>
                                             <li><a href="../blog.html">Insight</a></li>
                                             <li><a href="../contact.html">Contact</a></li>
+                                            <!-- Language Switcher -->
+                                            <li class="dropdown">
+                                                <a href="javascript:void(0);" class="dropbtn">Language 🌍</a>
+                                                <div class="dropdown-content">
+                                                    <a href="#" onclick="changeLanguage('en')"><img src="./assets/img/icon/uk.png" alt="English"> Eng</a>
+                                                    <a href="#" onclick="changeLanguage('fr')"><img src="./assets/img/icon/fr.png" alt="Français"> Fra</a>
+                                                    <a href="#" onclick="changeLanguage('ar')"><img src="./assets/img/icon/ar.png" alt="العربية"> Arab</a>
+                                                </div>
+                                            </li>
                                         </ul>
                                     </nav>
                                 </div>
