--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             </div>
             <div class="support-caption">
                 <p class="pera-top" data-key="about-text">Acker Choquette Dray Legal Consultants.</p>
-                <p>Our law firm operates out of the Emirate of Dubai, United Arab Emirates, since 1997, under the direction of its founder Mr. Denis Acker and Jordana Dray recently joined as Partner.
+                <p data-key="about-text-desc">Our law firm operates out of the Emirate of Dubai, United Arab Emirates, since 1997, under the direction of its founder Mr. Denis Acker and Jordana Dray recently joined as Partner.
                     We provide legal expertise to individual and corporate clients, wishing to establish professional and business activities in the Middle East Region, and to counsel individuals whose intentions are to extend their activities globally.</p>
             </div>
         </div>
@@ -426,10 +426,10 @@
 </script>
 	<!-- JS here -->
         <script src="./assets/js/translate.js"> </script>
-        <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script>
             AOS.init();
         </script>
+        <script src="./assets/js/translate.js"> </script>
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 		<!-- Jquery, Popper, Bootstrap -->
 		<script src="./assets/js/vendor/jquery-1.12.4.min.js"></script>
