--- a/Blogs/emiratisation.html
+++ b/Blogs/emiratisation.html
@@ -312,7 +312,8 @@
 
 <!-- JS here -->
 
-    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script src="./assets/js/translate.js"> </script>
+        <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
