--- a/servises/tax-law.html
+++ b/servises/tax-law.html
@@ -226,6 +226,7 @@
 
 	<!-- JS here -->
 	
+        <script src="./assets/js/translate.js"> </script>
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script>
             AOS.init();
