--- a/elements.html
+++ b/elements.html
@@ -95,7 +95,7 @@
 							<h2>Our Element</h2>
 							<nav aria-label="breadcrumb ">
 								<ol class="breadcrumb">
-								<li class="breadcrumb-item"><a href="index.html">Home</a></li>
+								<li class="breadcrumb-item"><a href="index.html" data-key="nav-home">Home</a></li>
 								<li class="breadcrumb-item"><a href="#">Element</a></li> 
 								</ol>
 							</nav>
