--- a/servises/arbitration-resolution.html
+++ b/servises/arbitration-resolution.html
@@ -59,11 +59,12 @@
                                 <div class="main-menu f-right d-none d-lg-block">
                                     <nav> 
                                         <ul id="navigation">                                                                                                                   
-                                            <li><a href="../index.html">Home</a></li>
-                                            <li><a href="../project.html">Team</a></li>
-                                            <li><a href="../services.html">Services</a></li>
-                                            <li><a href="../blog.html">Insight</a></li>
-                                            <li><a href="../contact.html">Contact</a></li>
+                                            <li><a href="../index.html" data-key="nav-home">Home</a></li>
+                                            <li><a href="../project.html" data-key="nav-team">Team</a></li>
+                                            <li><a href="../services.html" data-key="nav-services">Services</a></li>
+                                            <li><a href="../blog.html" data-key="nav-insight">Insight</a></li>
+                                            <li><a href="../contact.html" data-key="nav-contact">Contact</a></li>
+
                                             <!-- Language Switcher -->
                                             <li class="dropdown">
                                                 <a href="javascript:void(0);" class="dropbtn">Language 🌍</a>
@@ -117,12 +118,12 @@
                     <div class="col-12">
                         <div class="single-services section-padding2">
                             <div class="details-caption">
-                                <h3>ARBITRATION & DISPUTE RESOLUTION</h3>
-                                <p class="mb-50">Arbitration Law governs the process of resolving disputes outside of traditional courts, where parties agree to submit their conflict to one or more neutral arbitrators whose decision (award) is legally binding. It provides a framework for arbitration agreements, the conduct of proceedings, and enforcement of arbitral awards, ensuring efficiency, fairness, and finality in dispute resolution.</p>
+                                <h3 data-key="service7">ARBITRATION & DISPUTE RESOLUTION</h3>
+                                <p class="mb-50" data-key="service7-description">Arbitration Law governs the process of resolving disputes outside of traditional courts, where parties agree to submit their conflict to one or more neutral arbitrators whose decision (award) is legally binding. It provides a framework for arbitration agreements, the conduct of proceedings, and enforcement of arbitral awards, ensuring efficiency, fairness, and finality in dispute resolution.</p>
                                 <!-- Styled List -->
-                                <h3 class="mt-5">Key areas of company law include:</h3>
-                                <ul class="styled-list">
-                                    <li>Arbitration Expertise: Our team of experienced and bilingual lawyers specializes in arbitration procedures and proceedings both within and outside the UAE.</li>
+                                <h3 class="mt-5" data-key="service7-key">Key areas of this law include:</h3>
+                                <ul class="styled-list" data-key="service7-list">
+                                    <li>Arbitrati on Expertise: Our team of experienced and bilingual lawyers specializes in arbitration procedures and proceedings both within and outside the UAE.</li>
                                     <li>Property Disputes: Successfully handling claims related to property disputes.</li>
                                     <li>Civil and Commercial Disputes: Expertise in resolving civil and commercial disputes through arbitration.</li>
                                     <li>Dubai International Arbitration Centre (DIAC): Extensive experience disputing claims at DIAC.</li>
@@ -157,20 +158,20 @@
                     <div class="col-lg-4 col-md-6 col-sm-8">
                         <div class="single-footer-caption mb-30">
                             <div class="footer-logo">
-                                <a href="index.html">
-                                    <img src="assets/img/logo/logo2_footer.png" alt="Bin Mes'har & Co Logo">
+                                <a href="../index.html">
+                                    <img src="../assets/img/logo/logo2_footer.png" alt="Bin Mes'har & Co Logo">
                                 </a>
                             </div>
                             <div class="footer-tittle">
                                 <ul>
-                                    <li><strong>Dubai:</strong>Khalid Bin Waleed Road, Bank Street Building, 2nd Floor Office 215, Dubai. PO BOX 21602, United Arab Emirates</li>
-                                    <li>Phone: (+971) 4 355 0004</li>
-                                    <li>Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
+                                    <li data-key="footer-location1"><strong>Dubai:</strong> Khalid Bin Waleed Road, Bank Street Building, 2nd Floor Office 215, Dubai. PO BOX 21602, United Arab Emirates</li>
+                                    <li data-key="footer-phone1">Phone: (+971) 4 355 0004</li>
+                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
                                 </ul>
                                 <ul>
-                                    <li><strong>Paris:</strong>39Bis, Boulevard Exelmans, 75016 Paris</li>
-                                    <li>Phone: (+33) 145531996</li>
-                                    <li>Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
+                                    <li data-key="footer-location2"><strong>Paris:</strong> 39Bis, Boulevard Exelmans, 75016 Paris</li>
+                                    <li data-key="footer-phone2">Phone: (+33) 145531996</li>
+                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -180,12 +181,12 @@
                     <div class="col-lg-2 col-md-4 col-sm-5">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>Quick Links</h4>
+                                <h4 data-key="footer-links-title">Quick Links</h4>
                                 <ul>
-                                    <li><a href="contact.html">Contact Us</a></li>
-                                    <li><a href="project.html">Meet the Team</a></li>
-                                    <li><a href="blog.html">Estimates</a></li>
-                                    <li><a href="#">Our Process</a></li>
+                                    <li><a href="../contact.html" data-key="footer-link1">Contact Us</a></li>
+                                    <li><a href="../project.html" data-key="footer-link2">Meet the Team</a></li>
+                                    <li><a href="../blog.html" data-key="footer-link3">Estimates</a></li>
+                                    <li><a href="#" data-key="footer-link4">Our Process</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -195,9 +196,9 @@
                     <div class="col-lg-3 col-md-4 col-sm-7">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>News</h4>
-                                <p>The UAE Visa Amnesty Programme: A Golden Opportunity to Resolve Residency Issues</p>
-                                <p>September 30, 2024</p>
+                                <h4 data-key="footer-news-title">News</h4>
+                                <p data-key="footer-description">The UAE Visa Amnesty Programme: A Golden Opportunity to Resolve Residency Issues</p>
+                                <p data-key="footer-date">September 30, 2024</p>
                             </div>
                         </div>
                     </div>
@@ -210,7 +211,7 @@
                 <div class="row align-items-center">
                     <div class="col-xl-12">
                         <div class="footer-copy-right">
-                            <p>All rights reserved &copy;2023 Bin Mes'har & Co</p>
+                            <p data-key="footer-copyright">All rights reserved &copy;2025 Acker Choquette Dray Legal Consultants.</p>
                         </div>
                     </div>
                 </div>
