--- a/elements.html
+++ b/elements.html
@@ -63,7 +63,7 @@
                                         <li><a href="contact.html" data-key="nav-contact">Contact</a></li>
                                         <!-- Language Switcher -->
                                         <li class="dropdown">
-                                            <a href="javascript:void(0);" class="dropbtn">Language 🌍</a>
+                                            <a href="javascript:void(0);" class="dropbtn" data-key="switch">Language 🌍</a>
                                             <div class="dropdown-content">
                                                 <a href="#" onclick="changeLanguage('en')"><img src="./assets/img/icon/uk.png" alt="English"> Eng</a>
                                                 <a href="#" onclick="changeLanguage('fr')"><img src="./assets/img/icon/fr.png" alt="Français"> Fra</a>
