--- a/services.html
+++ b/services.html
@@ -69,7 +69,7 @@
                                         <li><a href="contact.html" data-key="nav-contact">Contact</a></li>
                                         <!-- Language Switcher -->
                                         <li class="dropdown">
-                                            <a href="javascript:void(0);" class="dropbtn">Language 🌍</a>
+                                            <a href="javascript:void(0);" class="dropbtn" data-key="switch">Language 🌍</a>
                                             <div class="dropdown-content">
                                                 <a href="#" onclick="changeLanguage('en')"><img src="./assets/img/icon/uk.png" alt="English"> Eng</a>
                                                 <a href="#" onclick="changeLanguage('fr')"><img src="./assets/img/icon/fr.png" alt="Français"> Fra</a>
@@ -170,8 +170,8 @@
                                                         <img src="assets/img/service/servicess5.jpg" alt="">
                                                     </div>
                                                     <div class="project-cap">
-                                                        <a href="servises/arbitration-dispute.html" class="plus-btn"><i class="fas fa-balance-scale"></i></a>
-                                                        <h4><a href="servises/arbitration-dispute.html" data-key="service7">ARBITRATION & DISPUTE RESOLUTION</a></h4>
+                                                        <a href="servises/arbitration-resolution.html" class="plus-btn"><i class="fas fa-balance-scale"></i></a>
+                                                        <h4><a href="servises/arbitration-resolution.html" data-key="service7">ARBITRATION & DISPUTE RESOLUTION</a></h4>
                                                     </div>
                                                 </div>
                                             </div>
