--- a/servises/arbitration-resolution.html
+++ b/servises/arbitration-resolution.html
@@ -49,9 +49,9 @@
                             <div class="col-xl-2 col-lg-2 col-md-1">
                                 <div class="logo">
                                     <!-- logo-1 -->
-                                    <a href="index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
+                                    <a href="../index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
                                     <!-- logo-2 -->
-                                    <a href="index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
+                                    <a href="../index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-8 col-lg-8 col-md-8">
@@ -67,11 +67,11 @@
 
                                             <!-- Language Switcher -->
                                             <li class="dropdown">
-                                                <a href="javascript:void(0);" class="dropbtn">Language 🌍</a>
+                                                <a href="javascript:void(0);" class="dropbtn" data-key="switch">Language 🌍</a>
                                                 <div class="dropdown-content">
-                                                    <a href="#" onclick="changeLanguage('en')"><img src="./assets/img/icon/uk.png" alt="English"> Eng</a>
-                                                    <a href="#" onclick="changeLanguage('fr')"><img src="./assets/img/icon/fr.png" alt="Français"> Fra</a>
-                                                    <a href="#" onclick="changeLanguage('ar')"><img src="./assets/img/icon/ar.png" alt="العربية"> Arab</a>
+                                                    <a href="#" onclick="changeLanguage('en')"><img src="../assets/img/icon/uk.png" alt="English"> Eng</a>
+                                                    <a href="#" onclick="changeLanguage('fr')"><img src="../assets/img/icon/fr.png" alt="Français"> Fra</a>
+                                                    <a href="#" onclick="changeLanguage('ar')"><img src="../assets/img/icon/ar.png" alt="العربية"> Arab</a>
                                                 </div>
                                             </li>
                                         </ul>
@@ -92,16 +92,16 @@
     <main>
         <!-- slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess2.jpg">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess5.jpg" style="background-position: center bottom;">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap pt-100">
-                                <h2>COMPANIES LAW</h2>
+                                <h2 data-key="service7">ARBITRATION & DISPUTE RESOLUTION</h2>
                                 <nav aria-label="breadcrumb ">
                                     <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-                                    <li class="breadcrumb-item"><a href="../services.html">Services</a></li> 
+                                    <li class="breadcrumb-item"><a href="../index.html" data-key="nav-home">Home</a></li>
+                                    <li class="breadcrumb-item"><a href="../services.html" data-key="nav-services">Services</a></li> 
                                     </ol>
                                 </nav>
                             </div>
@@ -122,21 +122,21 @@
                                 <p class="mb-50" data-key="service7-description">Arbitration Law governs the process of resolving disputes outside of traditional courts, where parties agree to submit their conflict to one or more neutral arbitrators whose decision (award) is legally binding. It provides a framework for arbitration agreements, the conduct of proceedings, and enforcement of arbitral awards, ensuring efficiency, fairness, and finality in dispute resolution.</p>
                                 <!-- Styled List -->
                                 <h3 class="mt-5" data-key="service7-key">Key areas of this law include:</h3>
-                                <ul class="styled-list" data-key="service7-list">
-                                    <li>Arbitrati on Expertise: Our team of experienced and bilingual lawyers specializes in arbitration procedures and proceedings both within and outside the UAE.</li>
-                                    <li>Property Disputes: Successfully handling claims related to property disputes.</li>
-                                    <li>Civil and Commercial Disputes: Expertise in resolving civil and commercial disputes through arbitration.</li>
-                                    <li>Dubai International Arbitration Centre (DIAC): Extensive experience disputing claims at DIAC.</li>
-                                    <li>Other Arbitration Centres: Proficient in handling cases at various arbitration centres within the UAE.</li>
-                                </ul>
-                                <h3><br>Our service:</h3>
-                                <p>Our bilingual legal team specializes in arbitration law both within and beyond the UAE. We bring extensive expertise in representing clients in arbitration proceedings, including property disputes, civil matters, and commercial claims. Our proven track record includes successful cases at leading institutions such as the Dubai International Arbitration Centre (DIAC) and other recognized arbitration centers. Whether drafting arbitration agreements or representing you in complex proceedings, we are dedicated to achieving favorable outcomes with efficiency and professionalism.</p>
+                                <ul class="styled-list">
+                                    <li data-key="service7-item1">Arbitration Expertise: Our team of experienced and bilingual lawyers specializes in arbitration procedures and proceedings both within and outside the UAE.</li>
+                                    <li data-key="service7-item2">Property Disputes: Successfully handling claims related to property disputes.</li>
+                                    <li data-key="service7-item3">Civil and Commercial Disputes: Expertise in resolving civil and commercial disputes through arbitration.</li>
+                                    <li data-key="service7-item4">Dubai International Arbitration Centre (DIAC): Extensive experience disputing claims at DIAC.</li>
+                                    <li data-key="service7-item5">Other Arbitration Centres: Proficient in handling cases at various arbitration centres within the UAE.</li>
+                                </ul>                                
+                                <h3 data-key="service-title"><br>Our service</h3>
+                                <p data-key="service7-content">Our bilingual legal team specializes in arbitration law both within and beyond the UAE. We bring extensive expertise in representing clients in arbitration proceedings, including property disputes, civil matters, and commercial claims. Our proven track record includes successful cases at leading institutions such as the Dubai International Arbitration Centre (DIAC) and other recognized arbitration centers. Whether drafting arbitration agreements or representing you in complex proceedings, we are dedicated to achieving favorable outcomes with efficiency and professionalism.</p>
                                  <!-- Add Contact Button -->
                                 <div class="contact mt-4">
-                                    <a href="../contact.html" class="contact-btn">
+                                    <a href="../contact.html" class="contact-btn" data-key="contact-title">
                                         Contact Us
                                     </a>
-                                    <a href="www.jdavocat.com" class="contact-btn1">
+                                    <a href="www.jdavocat.com" class="contact-btn1" data-key="visit-website">
                                         Visit Website
                                     </a>
                                 </div>
@@ -224,7 +224,7 @@
 
 	<!-- JS here -->
 	
-        <script src="./assets/js/translate.js"> </script>
+        <script src="../assets/js/translate.js"> </script>
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script>
             AOS.init();
